--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
   functions = "netlify/functions" # Path to your serverless functions folder
   publish = "dist" # Path to your React build folder (use "build" if that's your output directory)
+  node_version = "18"
 
 [[redirects]]
   from = "/*"
